# backend/src/main/java/com/ces/eos/controller/RockController.java
@@ -17,6 +17,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -83,6 +84,14 @@ public class RockController {
       @AuthenticationPrincipal CustomUserDetails userDetails) {
     RockResponse response = rockService.updateRock(rockId, request, userDetails.getId());
     return ResponseEntity.ok(response);
+  }
+
+  @DeleteMapping("/{rockId}")
+  @PreAuthorize(
+      "hasRole('ADMIN') or @teamSecurityService.isCurrentUserMemberOfTeamByRockId(#rockId)")
+  public ResponseEntity<Void> deleteRockById(@PathVariable UUID rockId) {
+    rockService.deleteRockById(rockId);
+    return ResponseEntity.noContent().build();
   }
 
   @GetMapping("/me")
